--- a/package.json
+++ b/package.json
@@ -3,6 +3,17 @@
   "private": true,
   "version": "1.1.0",
   "type": "module",
+  "author": {
+    "name": "baiwumm",
+    "email": "me@baiwumm.com",
+    "url": "https://baiwumm.com"
+  },
+  "repository": {
+    "url": "https://github.com/baiwumm/preview-craft.git"
+  },
+  "bugs": {
+    "url": "https://github.com/baiwumm/preview-craft/issues"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
