--- a/package.json
+++ b/package.json
@@ -15,44 +15,41 @@
     "url": "https://github.com/baiwumm/preview-craft/issues"
   },
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
+    "dev": "next dev -p 5173",
+    "build": "next build",
+    "start": "next start",
+    "lint": "eslint",
     "release": "release-it"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.18",
+    "@microlink/mql": "^0.14.0",
     "@vercel/analytics": "^1.6.1",
     "@zumer/snapdom": "^2.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "enum-plus": "^3.1.6",
     "lucide-react": "^0.562.0",
-    "motion": "^12.26.1",
+    "motion": "^12.27.0",
+    "next": "16.1.3",
+    "next-themes": "^0.4.6",
     "radix-ui": "^1.4.3",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
     "sonner": "^2.0.7",
-    "tailwind-merge": "^3.4.0",
-    "tailwindcss": "^4.1.18"
+    "swr": "^2.3.8",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.39.1",
-    "@release-it/conventional-changelog": "^10.0.4",
-    "@types/node": "^24.10.1",
-    "@types/react": "^19.2.5",
-    "@types/react-dom": "^19.2.3",
-    "@vitejs/plugin-react": "^5.1.1",
-    "eslint": "^9.39.1",
-    "eslint-plugin-react-hooks": "^7.0.1",
-    "eslint-plugin-react-refresh": "^0.4.24",
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "@typescript-eslint/parser": "^8.53.0",
+    "eslint": "^9",
+    "eslint-config-next": "16.1.3",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "globals": "^16.5.0",
-    "release-it": "^19.2.3",
+    "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
-    "typescript": "~5.9.3",
-    "typescript-eslint": "^8.46.4",
-    "vite": "^7.2.4"
+    "typescript": "^5"
   }
 }
