--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "motion": "^12.27.0",
     "next": "16.1.3",
     "next-themes": "^0.4.6",
+    "puppeteer": "^24.35.0",
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
