--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
+    "@release-it/conventional-changelog": "^10.0.4",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
@@ -49,6 +50,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.1.3",
     "eslint-plugin-simple-import-sort": "^12.1.1",
+    "release-it": "^19.2.3",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
